[gd_scene load_steps=12 format=3 uid="uid://cltl651iairpv"]

[ext_resource type="Script" path="res://Scenes/Menu.gd" id="1_g6yeu"]
[ext_resource type="Texture2D" uid="uid://d3qdeg8dgb05y" path="res://Sprites/Background/Menu.jpg" id="1_i6wo8"]
[ext_resource type="Texture2D" uid="uid://dkb5m0mwfxfbp" path="res://Sprites/UI/MainMenuButtons/StartGameNormal.png" id="2_htf03"]
[ext_resource type="Texture2D" uid="uid://br14s0phuavmh" path="res://Sprites/UI/MainMenuButtons/StartGamePressed.png" id="3_p81b2"]
[ext_resource type="Texture2D" uid="uid://dws1kb88d0r13" path="res://Sprites/UI/MainMenuButtons/StartGameHovered.png" id="4_2sfu8"]
[ext_resource type="Texture2D" uid="uid://j772gp15626a" path="res://Sprites/UI/MainMenuButtons/SettingsNormal.png" id="5_fve04"]
[ext_resource type="Texture2D" uid="uid://bgtqf5bojqijr" path="res://Sprites/UI/MainMenuButtons/SettingsPressed.png" id="6_4qx0a"]
[ext_resource type="Texture2D" uid="uid://dd0lmffc3erls" path="res://Sprites/UI/MainMenuButtons/SettingsHovered.png" id="7_2ycf1"]
[ext_resource type="Texture2D" uid="uid://c62ygjccpp56" path="res://Sprites/UI/MainMenuButtons/ExitNormal.png" id="8_evkr3"]
[ext_resource type="Texture2D" uid="uid://ctmbocm7nujr2" path="res://Sprites/UI/MainMenuButtons/ExitPressed.png" id="9_6vyxn"]
[ext_resource type="Texture2D" uid="uid://cboeh1u6ja6gh" path="res://Sprites/UI/MainMenuButtons/ExitHovered.png" id="10_0kfri"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6yeu")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_i6wo8")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = -7.0
offset_right = 495.0
offset_bottom = 7.0
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Start" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
texture_normal = ExtResource("2_htf03")
texture_pressed = ExtResource("3_p81b2")
texture_hover = ExtResource("4_2sfu8")
ignore_texture_size = true
stretch_mode = 5

[node name="Settings" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
texture_normal = ExtResource("5_fve04")
texture_pressed = ExtResource("6_4qx0a")
texture_hover = ExtResource("7_2ycf1")
ignore_texture_size = true
stretch_mode = 5

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
texture_normal = ExtResource("8_evkr3")
texture_pressed = ExtResource("9_6vyxn")
texture_hover = ExtResource("10_0kfri")
ignore_texture_size = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
